Major progress on the research system. Now all that is left is the ability to track/pick new research